Fixed spacing for title page and the mobile responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,21 @@
 /* Affects all pages */
+#mainSpacing{
+  height: 300px;
+}
+
+@media only screen and (max-width: 768px) {
+  #mainSpacing{
+    height: 100px;
+  }
+}
+
+#footerSpacing {
+  height: 150px;
+}
+
+#restaurant-details {
+  padding-top: 80px;
+}
 
 .page-footer, #pageHeader {
   position: fixed;
@@ -340,8 +357,8 @@ input {
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  
-  
+
+
   #map-wrapper {
     width: 100%;
   }
